--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,17 @@ edition = "2018"
 
 [dependencies]
 thiserror = "1.0"
+anyhow = "1.0"
 serde = { version = "1.0.111", features = ["derive"] }
 serde_derive = "1.0"
+serde_json = "1.0"
 serde-xml-rs = "0.4"
 chrono = "0.4"
 env_logger = "0.7"
 toml = "0.5"
 structopt = "0.3"
+hyper = "0.13"
+glob = "0.3.0"
 
 [dev-dependencies]
 uuid =  { version = "0.8", features = ["serde", "v4"] }
