--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,9 @@ serde = { version = "1.0.111", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
 serde-xml-rs = "0.4"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 env_logger = "0.7"
+log = "0.4"
 toml = "0.5"
 structopt = "0.3"
 hyper = "0.13"
