--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ toml = "0.5"
 structopt = "0.3"
 hyper = "0.13"
 glob = "0.3.0"
+humantime = "2.0"
 
 [dev-dependencies]
 uuid =  { version = "0.8", features = ["serde", "v4"] }
