--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cinotify"
+name = "cikit"
 version = "0.1.0"
 authors = ["Andrea Fiore <andrea.giulio.fiore@gmail.com>"]
 edition = "2018"
