--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ structopt = "0.3"
 reqwest = { version = "0.10", features = ["blocking", "json"] }
 glob = "0.3.0"
 humantime = "2.0"
+colored = "1.9"
 
 [dev-dependencies]
 uuid =  { version = "0.8", features = ["serde", "v4"] }
