--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 thiserror = "1.0"
 anyhow = "1.0"
-serde = { version = "1.0.111", features = ["derive"] }
+serde = { version = "1.0.114", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
 serde-xml-rs = "0.4"
@@ -21,9 +21,14 @@ structopt = "0.3"
 reqwest = { version = "0.10", features = ["blocking", "json"] }
 glob = "0.3.0"
 humantime = "2.0"
-colored = "1.9"
+colored = "2.0.0"
 atty = "0.2"
+include_dir = "0.6.0"
 
 [dev-dependencies]
 uuid =  { version = "0.8", features = ["serde", "v4"] }
 pretty_assertions = "0.6"
+
+[build-dependencies]
+glob = "0.3.0"
+fs_extra = "1.1"
