--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,16 +15,17 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+          target: "x86_64-unknown-linux-musl"
       - name: Build release artefact
         uses: actions-rs/cargo@v1.0.3
         env:
           CI: "false"
         with:
           command: build
-          args: --release
-      - name: Build Docker image
-        run: "docker build . -t afiore/cikit:${{ github.run_id }}"
-      - name: List Docker image
-        run: docker image ls
-      - name: Run cikit docker image
-        run: docker run afiore/cikit:${{ github.run_id }} --help
+          args: --target x86_64-unknown-linux-musl #--release
+#      - name: Build Docker image
+#        run: "docker build . -t afiore/cikit:${{ github.run_id }}"
+#      - name: List Docker image
+#        run: docker image ls
+#      - name: Run cikit docker image
+#        run: docker run afiore/cikit:${{ github.run_id }} --help
