--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: Install Openssl
         run: sudo apt-get install libssl-dev
+      - name: Find openssl
+        run: sudo find libssl.a /
       - name: Install stable Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -22,6 +24,7 @@ jobs:
         uses: actions-rs/cargo@v1.0.3
         env:
           CI: "false"
+          OPENSSL_LIB_DIR: /usr/lib/x86_64-linux-gnu
         with:
           command: build
           args: --target x86_64-unknown-linux-musl #--release
