--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/checkout@v1
       - name: Install Openssl
-        run: sudo apt-get install libssl-dev
+        run: sudo apt-get install libssl-dev musl-tools
       - name: Install stable Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
