--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
           OPENSSL_LIB_DIR: /usr/lib/x86_64-linux-gnu
         with:
           command: build
-          args: --target x86_64-unknown-linux-musl #--release
+          args: --target x86_64-unknown-linux-musl --release
       - name: Build Docker image
         run: "docker build . -t afiore/cikit:${{ github.run_id }}"
       - name: List Docker image
