--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 jobs:
   Publish:
-    #if: github.ref == 'refs/heads/master' || startsWith(github.ref,'refs/heads/release/')
+    if: github.ref == 'refs/heads/master' || startsWith(github.ref,'refs/heads/release/')
     runs-on: ubuntu-latest
     env:
       github_run_id: ${{ github.run_id }}
@@ -28,16 +28,9 @@ jobs:
 
       - name: Build release artefact
         uses: actions-rs/cargo@v1.0.3
-        # is this needed?
-        env:
-          CI: "false"
         with:
           command: build
           args: --target x86_64-unknown-linux-musl --release
-
-      # - name: Set up Docker Buildx
-      #   id: buildx
-      #   uses: docker/setup-buildx-action@v1
 
       - name: Build and push Docker image
         id: docker_build
