first cut at google cloud publisher

--- a/sample.config.toml
+++ b/sample.config.toml
@@ -8,4 +8,7 @@ user_1 = "userone"
 user_2 = "usertwo"
 
 [junit]
-report_dir_pattern = "**/target/test-reports"
+#report_dir_pattern = "**/target/test-reports"
+#report_dir_pattern = "**/*.xml"
+report_dir_pattern = "workarea/**/*.xml"
+
