--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ glob = "0.3.0"
 humantime = "2.0"
 include_dir = "0.6.0"
 log = "0.4"
+mime = "0.3"
 openssl = {version = "0.10", features = ["vendored"]}
 reqwest = {version = "0.10", features = ["blocking", "json"]}
 serde = {version = "1.0.114", features = ["derive"]}
@@ -26,7 +27,6 @@ serde_json = "1.0"
 structopt = "0.3"
 thiserror = "1.0"
 toml = "0.5"
-tree_magic = "0.2"
 
 [dev-dependencies]
 pretty_assertions = "0.6"
