--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,5 +11,5 @@ jobs:
         with:
           toolchain: stable
       - run: cargo install cargo2junit
-      - run: "cargo test -- -Z unstable-options --format json > target/testreport.xml"
+      - run: "mkdir junit-report && cargo test -- -Z unstable-options --format json > junit-report/testreport.xml"
       - run: "cat target/testreport.xml"
