--- a/sample.config.toml
+++ b/sample.config.toml
@@ -11,7 +11,7 @@ user_2 = "usertwo"
 bucket = "cikit"
 #creds will be read from `SERVICE_ACCOUNT` env variable
 
-[notifications.github]
+[notifications.github_comments]
 
 [junit]
 #report_dir_pattern = "**/target/test-reports/*.xml"
