wip: parallel report parsing

--- a/sample.config.toml
+++ b/sample.config.toml
@@ -1,17 +1,17 @@
 [notifications]
 
-[notifications.slack]
-webhook_url = "https://hooks.slack.com/services/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"
+# [notifications.slack]
+# webhook_url = "https://hooks.slack.com/services/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"
+# 
+# [notifications.slack.user_handles]
+# user_1 = "userone"
+# user_2 = "usertwo"
 
-[notifications.slack.user_handles]
-user_1 = "userone"
-user_2 = "usertwo"
-
-[notifications.google_cloud_storage]
-bucket = "cikit"
+# [notifications.google_cloud_storage]
+# bucket = "cikit"
 #creds will be read from `SERVICE_ACCOUNT` env variable
 
-[notifications.github_comments]
+# [notifications.github_comments]
 
 [junit]
 #report_dir_pattern = "**/target/test-reports/*.xml"
