--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ serde_derive = "1.0"
 serde_json = "1.0"
 structopt = "0.3"
 thiserror = "1.0"
+threadpool = "1.8"
 toml = "0.5"
 tree_magic = "0.2"
 
